--- a/package.json
+++ b/package.json
@@ -6,20 +6,30 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.19.1",
+    "express": "^4.17.2",
     "firebase": "^9.6.1",
+    "mongodb": "^4.3.1",
+    "mongoose": "^6.1.8",
+    "nedb": "^1.8.0",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "recharts": "^2.1.8",
+    "test": "file:../..",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
+    "restart": "nodemon node conne.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000",
+
   "eslintConfig": {
     "extends": [
       "react-app",
